--- a/JS/package.json
+++ b/JS/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "better-react-mathjax": "^2.0.3",
     "bootstrap": "^5.3.3",
+    "plotly.js": "^2.33.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-plotly.js": "^2.6.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
@@ -27,6 +29,7 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "typescript": "^5.2.2",
-    "vite": "^5.3.1"
+    "vite": "^5.3.1",
+    "vite-plugin-pwa": "^0.20.0"
   }
 }
