--- a/JS/package.json
+++ b/JS/package.json
@@ -6,12 +6,14 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "build:wasm": "cd cpc-graphs && wasm-pack build --target web --out-dir pkg",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
     "better-react-mathjax": "^2.0.3",
     "bootstrap": "^5.3.3",
+    "cpc-graphs": "file:cpc-graphs/pkg",
     "plotly.js": "^2.33.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
